Start building via build-env
Signed-off-by: Charles Short <charles.short@windriver.com>

--- a/starlingx/master/master.yaml
+++ b/starlingx/master/master.yaml
@@ -1,7 +1,8 @@
 ---
 target: starlingx-master.tar.gz
 rootfs:
+  variant: custom
   suite: bullseye
   mirror: repo.conf
   packages:
-    - python3
+    - ~prequired|~pimportant|~pstandard
