--- a/starlingx/master/master.yaml
+++ b/starlingx/master/master.yaml
@@ -24,3 +24,6 @@ rootfs:
     - ifupdown
     - openssh-server
     - linux-image-5.10.0-6-amd64-unsigned
+ostree:
+    repo: repo
+    branch: starlingx/master
